# interpreter-in-cpp

./: .gitignore  README.md
calculator/: CMakeLists.txt  Calculator.c  Calculator.h  Makefile  Parser.c  Parser.h  README.md  Scanner.c  Scanner.h  calculator.pro  examples.txt  main.c  strext.c  strext.h
calculator/calculator1/: Calculator.c  README.md
calculator/calculator2/: Parser.c  README.md  Scanner.c  main.c
calculator/calculator3/: Scanner.h  calculator.pro
calculator/calculator4/: Calculator.c  Calculator.h  Makefile  Parser.c  Scanner.c  Scanner.h
calculator/calculator5/: README.md  Scanner.c
calculator/man/docs/: Implementation-of-Calculator.md
calculator/man/docs/chapters/: 3-error-recovery.md
man/docs/: Implementation-of-Calculator.md
man/docs/chapters/: 1-compiler-principles.md  2-abstract-syntax-tree.md  3-error-recovery.md  4-extended-operations.md  5-function-call.md  6-repl.md  linenoise-0.md  linenoise-1.md  linenoise-2.md  linenoise-3.md
playground/calculator/calculator1/: Parser.c
playground/calculator/calculator2/: Parser.c  Parser.h  Scanner.h
playground/calculator/calculator3/: Calculator.c  Calculator.h  README.md  Scanner.c
playground/calculator/calculator4/: Parser.c  README.md  Scanner.c
playground/calculator/calculator5/: Calculator.c  Calculator.h  Makefile  Parser.c  README.md  Scanner.c  Scanner.h  main.c
playground/linenoise-repl/: CMakeLists.txt  main.cpp
playground/parser/: parser.c
